--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "alife-file-to-base64": "0.0.4",
+    "primeicons": "2.0.0",
+    "primeng": "8.1.1",
     "rxjs": "~6.4.0",
     "web-animations-js": "^2.3.2",
-    "zone.js": "~0.9.1",
-    "primeicons": "2.0.0",
-    "primeng": "8.1.1"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.0",
